--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -20,8 +20,8 @@ h3 {
 .bio {
   grid-area: bio;
   img {
-    width: 15%;
-    border-radius: 5%;
+    width: 25%;
+    border-radius: 50%;
   }
 }
 .icon {
