--- a/sass/components/_whitespace.scss
+++ b/sass/components/_whitespace.scss
@@ -1,5 +1,5 @@
 .bio {
-  padding-top: 2%;
+  padding-top: 5%;
   height: 100vh;
 }
 
